fix: update header and back-to-top button behavior
- Add sticky positioning and z-index to header to ensure it appears above other elements
- Update header hiding/showing logic to use `transform` property for smoother transitions
- Add logic to show/hide back-to-top button based on scroll position
- Update back-to-top button click handler to use `window.scrollTo` with smooth scrolling

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -39,23 +39,17 @@ body::-webkit-scrollbar-thumb {
   border-radius: 4px;
 }
 
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
 body {
     display: flex;
     flex-direction: column;
-    
+    min-height: 100vh;
     background-color: var(--color-background);
     color: var(--color-text);
-
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif;
     line-height: 1.5; 
-
     font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 
 #back-to-top {
@@ -232,6 +226,8 @@ input {
 }
 
 .app-header {
+    position: sticky;
+    top: 0;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -240,15 +236,15 @@ input {
     padding: 4px 24px;
     align-items: center;
     height: var(--header-height);
-    z-index: 999;
+    z-index: 1000;
 }
     
-.app-header--fixed-top {
+/* .app-header--fixed-top {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-}
+} */
 
 .app-header--hidden {
   transform: translateY(-100%);
@@ -324,7 +320,7 @@ input {
 }
 
 .app-main {
-    flex: 1 0 auto;
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -339,6 +335,7 @@ input {
 footer {
     position: relative;
     display: flex;
+    flex-shrink: 0;
     flex-direction: row;
     justify-content: center;
     gap: 10px;
